--- a/index.html
+++ b/index.html
@@ -8,14 +8,16 @@
 </head>
 
 <body>
-<h1>Implement the symbolic diff here</h1>
-<div id="container">
 
-</div>
-<div>
-    <button id="demoButton">
-        Add something
-    </button>
-</div>
+<h2>Дифференцирование строки</h2>
+
+
+<label for="exp">Enter your expression:</label><br>
+<input type="text" id="exp" value="-4*x^3-x^2"><br>
+<label for="exp">Enter your var:</label><br>
+<input type="text" id="varx" value="x"><br>
+<button id="submit">Submit</button><br>
+<label id="ans">Answer:</label><br>
+
 </body>
 </html>
